it worksgit add .

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
           <a class="nav-item nav-link" href="/">Home</a>
           <a class="nav-item nav-link" href="/saved">Saved Articles</a>
           <form class="form-inline">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Scrape Articles</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="scrape">Scrape Articles</button>
           </form>
         </div>
       </div>
