--- a/views/layouts/partials/notes-modal.handlebars
+++ b/views/layouts/partials/notes-modal.handlebars
@@ -1,5 +1,3 @@
-<!--Notes Modal-->
-
 <div class="modal fade modalNote" id="noteModal{{this._id}}" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -10,16 +8,16 @@
             <div class="modal-body">
                 {{#if this.notes}}
                     {{#each this.notes}}
-                        <div class="panel panel-default">
-                            <div class="panel-body">
+                        <div class="card">
+                            <div class="card-body">
                                 <p class="previousNotes"> {{this.body}}</p>
                                 <button type="button" class="btn btn-danger deleteNote" data-note-id={{this._id}} data-article-id={{this.article}}>X</button>
                             </div>
                         </div>
                     {{/each}}
                 {{else}}
-                    <div class="panel panel-default">
-                        <div class="panel-body">
+                    <div class="card">
+                        <div class="card-body">
                             <h4>No notes for this article yet.</h4>
                         </div>
                     </div>
